rev_17-Mar_22-14_05

Switched dafault filebrowser settings to all and ckgedit

18 Nov
Fix for HTML in user profile panel

2 Feb 2017
Synched with ckgedit

3 March 
remove backslashes from ends of blockquote

Mar 21
Converted all uses of ckgedit to ckgdoku in code; now it loads as plugin ckgdoku

Mar 22
ckgedit/ckgdoku warning: one must be disabled (metq.php)