@@ -354,15 +354,15 @@ function check_userfiles() {
                $security = $userfiles . '.htaccess.security';
                if(file_exists($security)) {                   
                    if(!copy($security, $htaccess)) {
-                       msg('For winstyle setup: cannot copy to ' . $htaccess);
+                       msg($this->getLang("ws_cantcopy") . $htaccess);  
                    }
-                   else msg('For winstyle setup, copied security-enabled .htaccess to data/media' ."\n" .'See ckgdoku/fckeditor/userfiles/.htacess.security');
+                   else msg($this->getLang("ws_copiedhtaccess"));    
                }
           } 
          return;    
      }
      if(!is_readable($userfiles) && !is_writable($userfiles)){
-              msg("ckgdoku cannot access $userfiles. Please check the permissions.");
+              msg($this->getLang("userfiles_perm" ) . ' ' . $userfiles) ;
 		      return;
      }		   
 	$version = io_readFile(DOKU_PLUGIN . 'ckgdoku/version');
@@ -424,7 +424,7 @@ function check_userfiles() {
                        }					 
 					 if(!@symlink($data_media,$path) ) {
 					     $bad_create = true;
-						  if($show_msg)  msg("unable to create $name link:  $path",-1);			  
+						  if($show_msg)   msg($this->getLang("sym_not created_1") . " $name link:  $path",-1);		
 				   }
 				   else {
 				     $successes[] = $name; 
@@ -434,22 +434,19 @@ function check_userfiles() {
       }
 	  else {
 	     if($show_msg)  {
-			msg("Cannot create symlinks for filebrowser.  Cannot access:  $userfiles   ",-1);
+	        msg($this->getLang("sym_not created_2") ." $userfiles",-1);
 		 }
 	  }
 	   
-	 
-	   
 	  if($bad_create) {
 	       if($show_msg)  {
-			   msg("There was an error when trying to create symbolic links in $userfiles. "
-					. "See ckgdoku/auto_install.pdf  or  the <a href='http://www.mturner.org/fckgLite/doku.php?do=search&id=htaccess+|+media'>fckgLite web site</a>" , 2);					
+		       msg($this->getLang("sym_not created_3") . " $userfiles"); 
 				}
       }
 	  else {	        
 	       if(count($successes)) {
 				$links_created = implode(', ',$successes);
-				msg('The following links were created in the userfiles directory: ' . $links_created,2);
+				 msg($this->getLang("syms_created") . " $links_created",2);   
 			 }
 	  }
 	  			io_saveFile($meta,$version);
@@ -565,6 +562,9 @@ function check_userfiles() {
         if(in_array('ckgedit', $plist)) {    
             msg($this->getLang('ckgcke_conflict'),2); 
         }
+
+   
+   
        $JSINFO['confirm_delete']= $this->getLang('confirm_delete');
        $JSINFO['doku_base'] = DOKU_BASE ;
        $JSINFO['cg_rev'] = $INPUT->str('rev');
