@@ -37,7 +37,6 @@ $lang['js']['dwp_updated'] = 'Editor priority updated to: ';
 $lang['js']['dwp_not_sel'] = 'Editor priority not selected: it will be determined by dw_users group config setting';
 $lang['js']['mediamgr_notice'] = 'Use the link dialog to insert';
 $lang['js']['font_conflict'] = "The parser found one or more link-font conflicts.  By clicking OK, you can return to the editor and remove the font styles.  For more information see: https://www.dokuwiki.org/plugin:ckgdoku:font_styling#conflicts_with_dokuwiki_links";
-//https://www.dokuwiki.org/plugin:ckgdoku:font_styling#conflicts_with_dokuwiki_links
 $lang['mediamgr_imgonly'] = 'Upload only images when using image dialog: ';
 $lang['uprofile_title'] = "Select Your Default Editor";
 $lang['btn_val_dw_fb'] = "DW Filebrowser";
@@ -47,3 +46,10 @@ $lang['btn_title_ckg_fb'] = "Save and close the editor and switch to the CKG Fil
 $lang['formatdel'] = 'Markup removed from headers(s): not supported by Dokuwiki';
 $lang["fontdel"] ='Font Markup removed from link(s): not supported by Dokuwiki';
 $lang["ckgcke_conflict"] ='A copy of ckgedit has been detected.  Either ckgdoku or ckgedit must be disabled.';
+$lang["ws_cantcopy"] ='For winstyle setup: cannot copy to ';
+$lang["ws_copiedhtaccess"]='For winstyle setup, copied security-enabled .htaccess to data/media' ."\n" .'See ckgdoku/fckeditor/userfiles/.htacess.security';
+$lang["userfiles_perm"] ='Please check permissions; ckgdoku cannot access ';
+$lang["sym_not created_1"] = 'Unable to create ';
+$lang["sym_not created_2"] = 'Cannot create symlinks for filebrowser:  cannot access: ';
+$lang["sym_not created_3"] = 'There was an error when trying to create symbolic links in ';
+$lang["syms_created"] = 'The following links were created in the userfiles directory: ';
